--- a/AnsonTestingPage/manager/manHome-V1.html
+++ b/AnsonTestingPage/manager/manHome-V1.html
@@ -185,10 +185,10 @@
       <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
           <ul class="nav nav-sidebar">
-            <li><a href="#">Create New Project</a></li>
+<!--             <li><a href="#">Create New Project</a></li>
             <li><a href="#">Show Iteration Status</a></li>
             <li><a href="#">Developer List</a></li> 
-            <li><a href="#">Project Summary</a></li>
+            <li><a href="#">Project Summary</a></li> -->
           </ul>
 
         </div>
