--- a/AnsonTestingPage/manager/manSummary.html
+++ b/AnsonTestingPage/manager/manSummary.html
@@ -161,7 +161,7 @@
             
             <!-- <li><a href="#">Logout</a></li> -->
                         <!-- Anson added this new button-->
-            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Logout</button>
+            <li><button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Logout</button></li>
           </ul>
         </div>
       </div>
