--- a/AnsonTestingPage/manager/people.html
+++ b/AnsonTestingPage/manager/people.html
@@ -172,7 +172,7 @@
 
             <!-- Trigger the modal with a button -->
             <!-- Anson added this new button-->
-            <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Logout</button>
+            <li><button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Logout</button></li>
             
           </ul>
         </div>
