Make changes on tested Summary

--- a/AnsonTestingPage/developer/reportdefect.html
+++ b/AnsonTestingPage/developer/reportdefect.html
@@ -191,7 +191,9 @@
 
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-        <center><h1 class="page-header">Report Defect</h1></center>
+          <h1 class="page-header">Report Defect</h1>
+
+
 
       <center>
           <form action="." method="POST">
